2007-04-10  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/CecilWidgetLibrary.cs: Performance improvements in the
	  method that resolves widget types.
	* libstetic/wrapper/ButtonBox.cs: Don't automatically bind dialog
	  buttons with response type set to None.
	* libstetic/PropertyDescriptor.cs: Set the hasDefault flag when a
	  default is explicitely set in the objects.xml file.
	* libstetic/Makefile.am: Updated.

2007-03-28  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/ApplicationBackend.cs: Don't allow cutting/copying top
	  level widgets. Fixes bug #81015.

2007-03-28  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/wrapper/Container.cs, libstetic/wrapper/Widget.cs: When
	  selecting a widget, avoid setting the focus to the parent
	  container, since it may end changing the selection. Fixes bug
	  #81014. 

2007-03-28  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/wrapper/objects.xml: Removed properties already inherited
	  from Gtk.Button.

2007-03-28  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/undo/XmlDiffAdaptor.cs: Don't crash if a child element
	  doesn't exist.
	* libstetic/editor/StockItem.cs: Fix warning.

2007-03-28  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/wrapper/ScrolledWindow.cs: Don't generate the viewport if
	  there isn't any child. Make scrollbars always visible in the
	  designer.
	* libstetic/wrapper/objects.xml: Ignore the default for DrawIndicator,
	  since the default is 'false', but a default CheckButton has 'true'
	  as value. 

2007-03-26  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/WidgetEditSession.cs,
	  libsteticui/CodeGeneratorPartialClass.cs,
	  libstetic/wrapper/Widget.cs, libstetic/wrapper/objects.xml: Support
	  generating private classes.
	* libsteticui/ComponentType.cs, libstetic/ImageInfo.cs,
	  libstetic/wrapper/Action.cs, libstetic/wrapper/ImageMenuItem.cs,
	  libstetic/editor/StockItem.cs, libstetic/WidgetUtils.cs: Use the
	  new MissingIcon constant.